--- a/index.html
+++ b/index.html
@@ -88,3 +88,5 @@ function diff(){
 }
 $_$('button').addEventListener('click',diff);
 </script>
+
+<ins>项目地址：<a href="https://coding.net/u/luojia/p/html5-image-diff/">https://coding.net/u/luojia/p/html5-image-diff/</a></ins>
