--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <style>
 img{
+	max-width: 150px;
 	height: auto;
 }
 </style>
@@ -65,7 +66,8 @@ function diff(){
 	console.log('diff')
 	var w=imageCanvas.i1.width,
 		h=imageCanvas.i1.height,
-		length=w*h;
+		length=w*h,
+		newData=ctx.createImageData(w,h);
 	canvas.style.width=((canvas.width=w)/X+'px');
 	canvas.style.height=((canvas.height=h)/X+'px');
 	var imgData1=imageCanvas.i1.getContext('2d').getImageData(0,0,w,h);
@@ -76,14 +78,13 @@ function diff(){
 		for(var i=4;i--;){
 			num=g*4-i-1;
 			if((imgData1.data[num])!==(imgData2.data[num])){
-				var line=(g/w)|0+0.5,
-					colume=(g)%w;
-				ctx.fillRect(colume,line,1,1);
+				newData.data[g*4-1]=240;
 				count++;
 				break;
 			}
 		}
 	}
+	ctx.putImageData(newData,0,0);
 	console.log('diff:',count,'total:',total,length)
 }
 $_$('button').addEventListener('click',diff);
