--- a/index.html
+++ b/index.html
@@ -90,4 +90,4 @@ function diff(){
 $_$('button').addEventListener('click',diff);
 </script>
 
-<ins>项目地址：<a href="https://coding.net/u/luojia/p/html5-image-diff/">https://coding.net/u/luojia/p/html5-image-diff/</a></ins>
+<ins>项目地址：<a href="https://github.com/JiaJiaJiang/image-diff/">https://github.com/JiaJiaJiang/image-diff/</a></ins>
